--- a/alembic.ini
+++ b/alembic.ini
@@ -3,7 +3,8 @@
 [alembic]
 # path to migration scripts
 # Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = alembic_sync
+; script_location = alembic_sync
+script_location = alembic_async
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -64,7 +65,8 @@ version_path_separator = os
 # output_encoding = utf-8
 
 ; sqlalchemy.url = sqlite+aiosqlite:///foo_async.sqlite
-sqlalchemy.url = sqlite:///db_sync.sqlite
+; sqlalchemy.url = sqlite:///db_sync.sqlite
+sqlalchemy.url = sqlite+aiosqlite:///db_async.db
 
 
 [post_write_hooks]
